A config file, namecheap API library and basic checking of a single hard coded domain

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+
+# Config file (example in config.example.json)
+config.json
+tldlist.json
