--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "domain-availability",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "q": "^1.4.1",
+    "request": "^2.58.0",
+    "serve-favicon": "~2.2.1",
+    "xml2js": "^0.4.9"
   }
 }
