--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+public/vendor
 
 
 # Config file (example in config.example.json)
