--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "jquery": "^2.1.4",
     "morgan": "~1.5.3",
     "q": "^1.4.1",
     "request": "^2.58.0",
     "serve-favicon": "~2.2.1",
     "xml2js": "^0.4.9"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^2.0.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.0"
   }
 }
