Allow port and host to be configured from the config file

--- a/config.example.json
+++ b/config.example.json
@@ -2,5 +2,7 @@
   "user": "ncuser",
   "apikey": "nczpikey",
   "domain": "api.sandbox.namecheap.com",
-  "tlds": "tldlist.json"
+  "tlds": "tldlist.json",
+  "port": 3000,
+  "host": "127.0.0.1"
 }
