Server-side raven too

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^2.1.4",
     "morgan": "~1.5.3",
     "q": "^1.4.1",
+    "raven": "^0.8.1",
     "request": "^2.58.0",
     "serve-favicon": "~2.2.1",
     "xml2js": "^0.4.9"
