--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.5.3",
     "q": "^1.4.1",
     "raven": "^0.8.1",
+    "raven-js": "^1.1.19",
     "request": "^2.58.0",
     "serve-favicon": "~2.2.1",
     "xml2js": "^0.4.9"
