Added analytics. Fixes #3

--- a/config.example.json
+++ b/config.example.json
@@ -10,5 +10,9 @@
     "127.0.0.1"
   ],
   "realIPheader": "X-Forwarded-For",
-  "NCaffiliateID": 80599
+  "NCaffiliateID": 80599,
+  "piwik": {
+    "uri": "https://piwik.you.tld",
+    "site": 1
+  }
 }
