--- a/config.example.json
+++ b/config.example.json
@@ -14,5 +14,11 @@
   "piwik": {
     "uri": "https://piwik.you.tld",
     "site": 1
-  }
+  },
+  "prioritize": [
+    "com",
+    "net",
+    "org",
+    "me"
+  ]
 }
