--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "chart.js": "^1.0.2",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
